--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content width="device-width" , intial-scale="1">
     <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
         crossorigin="anonymous">
     <link href="style.css" type="text/css" rel="stylesheet">
+
     <title>Aloha &nbsp; Apparel Co.</title>
 </head>
 
@@ -16,10 +19,10 @@
         </div>
         <nav class="main-navigation">
             <ul>
-                <li><a href="#about"></a>ABOUT</li>
-                <li><a href="#shop"></a>SHOP</li>
-                <li><a href="featured"></a></a>FEATURED</li>
-                <li><a href="updates"></a>UPDATES</li>
+                <li><a href="#about">ABOUT</a></li>
+                <li><a href="#shop">SHOP</a></li>
+                <li><a href="#featured">FEATURED</a></a></li>
+                <li><a href="#updates">UPDATES</a></li>
             </ul>
         </nav>
         <div class="cart">
@@ -28,17 +31,17 @@
     </header>
 
     <section class="banner">
-        <h1>NEW COLLECTION</h1>
-        <p>Spring/Summer 2016</p>
+        <p><span class="banner-collection">NEW COLLECTION</span></p>
+        <h1><span class="banner-season">Spring/Summer 2016</span></h1>
         <!--<h2><i class="fas fa-cannabis fa-spin fa-3x"></i></h2>-->
-        <div class="banner-girl">
-        <img src="images/banner-girl.png" alt="model">
+        <!-- <div class="banner-girl">
+        <img src="images/banner-girl.png" alt="model"> -->
         </div>
     </section>
 
 
     <section class="about">
-        <h3><em>Hand-Crafted </em><strong>Styles</strong></h3>
+        <h2><span class="italics">Hand-Crafted </span><span class="strong">Styles</span></h2>
         <p>Aloha Apparel Co. sells only the finest ready-to-travel clothing.
             Browser our current selection of products or sign-up for updates below</p>
     </section>
@@ -64,7 +67,7 @@
     </section>
 
     <section class="most-loved-products">
-        <h5><em>Most-Loved </em><strong>Products</strong></h5>
+        <h2><span class="italics">Most-Loved </span><span class="strong">Products</span></h2>
 
         <div class="checked-stretch-dress">
             <img src="images/checked-stretch-dress.jpg" alt="checked stretch dress">
@@ -96,7 +99,7 @@
 
 
     <section class="newsletter">
-        <h6><em>Sign-up for </em><strong>updates</strong></h6>
+        <h4><em>Sign-up for </em><strong>updates</strong></h4>
         <p>Stay updated on our latest product releases, be first to find out about
             upcoming sales, and get free style tips from our blog. Unsubscribe any time.</p>
         <div class="email-form">
@@ -111,12 +114,12 @@
 
 
     <Footer class="site-footer">
-        <div id="company-info">
+        <div class="company-info">
             <p>&copy;2016 Aloha Apparel Co.<br>Powered by HTML and CSS.<br>604-604-6040.
                 <a href="mailto:info@alohaapparel.com"></a>info&#64;alohaapparel.com</p>
             <p>1490 W Broadway, Vancouver, BC, Canada</p>
         </div>
-        <div id="social-links">
+        <div class="social-links">
             <ul>
                 <li><a href="#facebook"><i class="fab fa-facebook"></i>&nbsp;Facebook</a></li>
                 <li><a href="#twitter"><i class="fab fa-twitter"></i>&nbsp;twitter</a></li>
@@ -127,4 +130,5 @@
         </div>
     </Footer>
 </body>
+
 </html>
