--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, intial-scale=1">
@@ -14,8 +13,6 @@
 </head>
 
 <body class="site-container">
-
-
 
     <header class="site-header">
         <div class="logo">
@@ -36,12 +33,7 @@
             <img src="images/cart-icon.svg" alt="shopping cart">
         </div>
 
-
     </header>
-
-
-
-
 
     <section class="banner">
         <h1><span class="banner-collection">NEW COLLECTION</span></h1>
@@ -51,32 +43,32 @@
     </section>
 
 
-
-
     <section class="about" id="about">
         <h2><span class="italics">Hand-Crafted </span><span class="strong">Styles</span></h2>
         <p>Aloha Apparel Co. sells only the finest ready-to-travel clothing.
             Browser our current selection of products or sign-up for updates below</p>
     </section>
+    
     <section class="categories" id="shop">
-        <!-- <div class="mens">
-            <img src="images/mens-category.jpg" alt="Men's">
+       <div class="mens cat-title">
+            <p>Men's</p>
         </div>
-        <div class="trends">
-            <img src="images/trends-category.jpg" alt="Trends">
+        <div class="trends cat-title">
+            <p>Trend's</p>
         </div>
-        <div class="glasses">
-            <img src="images/glasses-category.jpg" alt="glasses">
+        <div class= "glasses cat-title">
+            <p>Glasses</p>
         </div>
-        <div class="sale">
-            <img src="images/sale-category.jpg" alt="Sale">
+        <div class="sale cat-title">
+            <p>Sale</p>
         </div>
-        <div class="bags">
-            <img src="images/bags-category.jpg" alt="bags">
+        <div class="bags cat-title">
+            <p>Bags</p>
         </div>
-        <div class="womens">
-            <img src="images/womens-category.jpg" alt="womens">
-        </div> -->
+        <div class="womens cat-title">
+            <p>Women's</p>
+        </div>
+
     </section>
 
     <section class="most-loved-products" id="featured">
@@ -151,8 +143,8 @@
             upcoming sales, and get free style tips from our blog. Unsubscribe any time.</p>
         <div class="email-form">
             <form action="" method="get">
-                <input text="email" name="Email" placeholder="email">
-                <input type="submit" value="Subscribe">
+                <input text="email" name="Email" placeholder="Your Email">
+                <button class="submit" type="submit">Subscribe</button>
             </form>
         </div>
     </section>
@@ -169,9 +161,9 @@
         <div class="social-links">
             <ul>
                 <li><a href="#facebook"><i class="fab fa-facebook"></i>&nbsp;Facebook</a></li>
-                <li><a href="#twitter"><i class="fab fa-twitter"></i>&nbsp;twitter</a></li>
-                <li><a href="#instagram"><i class="fab fa-instagram"></i>&nbsp;instagram</a></li>
-                <li><a href="#pinterest"><i class="fab fa-pinterest"></i>&nbsp;pinterest</a></li>
+                <li><a href="#twitter"><i class="fab fa-twitter"></i>&nbsp;Twitter</a></li>
+                <li><a href="#instagram"><i class="fab fa-instagram"></i>&nbsp;Instagram</a></li>
+                <li><a href="#pinterest"><i class="fab fa-pinterest"></i>&nbsp;Pinterest</a></li>
                 <li><a href="#google+"><i class="fab fa-google-plus-g"></i>&nbsp;Google+</a></li>
             </ul>
         </div>
