fixed banner, a links, hover colors

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
         <div class="logo">
             <img src="images/aloha-logo.svg" alt="aloha-logo">
         </div>
-        
-        
+
         <nav class="main-navigation">
             <ul>
                 <li><a href="#about">ABOUT</a></li>
@@ -54,7 +53,7 @@
             <p>Men's</p>
         </div>
         <div class="trends cat-title">
-            <p>Trend's</p>
+            <p>Trends</p>
         </div>
         <div class= "glasses cat-title">
             <p>Glasses</p>
