--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, intial-scale=1">
-    <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet">
+    <!-- <link href="https://fonts.googleapis.com/css?family=Coiny" rel="stylesheet"> -->
+    
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
         crossorigin="anonymous">
+    
     <link href="style.css" type="text/css" rel="stylesheet">
     <link rel="stylesheet" href="flickity.css" media="screen">
 
@@ -159,11 +161,11 @@
         </div>
         <div class="social-links">
             <ul>
-                <li><a href="#facebook"><i class="fab fa-facebook"></i>&nbsp;Facebook</a></li>
-                <li><a href="#twitter"><i class="fab fa-twitter"></i>&nbsp;Twitter</a></li>
-                <li><a href="#instagram"><i class="fab fa-instagram"></i>&nbsp;Instagram</a></li>
-                <li><a href="#pinterest"><i class="fab fa-pinterest"></i>&nbsp;Pinterest</a></li>
-                <li><a href="#google+"><i class="fab fa-google-plus-g"></i>&nbsp;Google+</a></li>
+                <li><a href="#facebook"><i class="fab fa-facebook"></i>&nbsp;<span class="social-text">Facebook</span></a></li>
+                <li><a href="#twitter"><i class="fab fa-twitter"></i>&nbsp;<span class="social-text">Twitter</span></a></li>
+                <li><a href="#instagram"><i class="fab fa-instagram"></i>&nbsp;<span class="social-text">Instagram</span></a></li>
+                <li><a href="#pinterest"><i class="fab fa-pinterest"></i>&nbsp;<span class="social-text">Pinterest</span></a></li>
+                <li><a href="#google+"><i class="fab fa-google-plus-g"></i>&nbsp;<span class="social-text">Google+</span></a></li>
             </ul>
         </div>
     </Footer>
